<resources>
    <string name="app_name">Sauti ya karmeli</string>
    <string name="app_preference">com.blogspot.waptell.tafakariapp_app_preference</string>
    <string name="app_welcome_preference">com.blogspot.waptell.tafakariapp_app_welcome_preference</string>

    <!--Admob String-->
    <!--test-->
    <!--<string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>-->
    <!--<string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <!--<string name="abmob_interstial_id">ca-app-pub-3940256099942544/1033173712</string>-->
    <!--<string name="abmob_videobanner_id">ca-app-pub-3940256099942544/5224354917</string>-->

    <!--real-->
    <string name="admob_app_id">ca-app-pub-8792412382870333~7252295525</string>
    <string name="admob_banner_id">ca-app-pub-8792412382870333/2266017564</string>
    <string name="abmob_interstial_id">ca-app-pub-8792412382870333/1240834211</string>


    <string name="somo">MASOMO YA MISA, JANUARI 29, 2019 JUMANNE, JUMA LA 3 LA MWAKA SOMO 1 Ebr. 10:1 – 10 Kwa kuwa torati ni kivuli cha mema yatakayokuwa, wala si sura yenyewe ya mambo hayo kwa dhabihu zile zile wanazozitoa kila mwaka daima haiwezi wakati wowote kuwakamilisha wakaribiao. Kama ndivyo, je! Dhabihu hazingekoma kutolewa; kwa maana waabuduo, wakiisha kusafishwa mara moja, wasingejiona tena kuwa na dhambi? Lakini katika dhabihu hizo liko kumbukumbu la dhambi kila mwaka. Maana haiwezekani damu ya mafahali na mbuzi kuondoa dhambi. Kwa hiyo ajapo ulimwenguni, asema. Dhabihu na toleo hukutaka, lakini mwili uliwekea tayari; sadaka za kuteketezwa na sadaka za dhambi hukupendezwa nazo; ndipo niliposema, Tazama, nimekuja (katika gombo la chuo nimeandikiwa) niyafanye mapenzi yako, Mungu. Hapo juu asemapo, Dhabihu na matoleo na sadaka za kuteketezwa na hizo za dhambi hukuzitaka, wala hukupendwazwa nazo (zitolewazo kama ilivyoamuru torati), ndipo aliposema, Tazama, nimekuja niyafanye mapenzi yako. Aondoa la kwanza, ili kusudi alisimamishe la pili. Katika mapenzi hayo tumepata utakaso, kwa kutolewa mwili wa Yesu Kristo mara moja tu. Neno la Bwana… Tumshukuru Mungu. WIMBO WA KATIKATI Zab. 40:1, 3, 6 – 7, 10 (K) 7, 8 (K) Ndipo niliposema, Tazama, nimekuja, kuyafanya mapenzi yako. Nalimngoja Bwana kwa saburi, Akaniinamia akakisikia kilio changu. Akatia wimbo mpya kinywani mwangu Ndio sifa zake Mungu wetu. (K) Dhabihu na matoleo hukupendezwa nazo, Masikio yangu umeyazibua, Kafara na sadaka za dhambi hukuzitaka. Ndipo niliposema, Tazama nimekuja. (K) Nimehubiri habari za haki Katika kusanyiko kubwa, Sikuizuia midomo yangu; Ee Bwana, unajua. (K) Sikusitiri haki yako moyoni mwangu, Nimetangaza uaminifu wako na wokovu wako. Sikuficha fadhili zako wala kweli yako Katika kusanyiko kubwa. (K) SHANGILIO Yak. 1:21 Aleluya, aleluya, Pokeeni kwa upole neno la Mungu lililopandwa ndani, liwezalo kuziokoa roho zenu. Aleluya. INJILI Lk. 10:1–9 Bwana aliweka wengine, sabini, akawatuma wawili wawili wamtangulie kwenda kila mji na kila mahali alipokusudia kwenda mwenyewe. Akawaambia, Mavuno ni mengi, lakini watenda kazi ni wachache; basi mwombeni Bwana wa mavuno apeleke watenda kazi katika mavuno yake. Enendeni; angalieni, nawatuma kama wana-kondoo kati ya mbwa-mwitu. Msichukue mfuko, wala mkoba, wala viatu; wala msimwamkie mtu njiani. Na nyumba yoyote mtakayoingia, semeni kwanza, Amani iwemo nyumbani humu; na akiwamo mwana wa amani, amani yenu itamkalia; la, hayumo, amani yenu itarudi kwenu. Basi, kaeni katika nyumba iyo hiyo, mkila na kunywa vya kwao; maana, mtenda kazi amestahili kupewa ujira wake. Msihame-hame kutoka nyumba hii kwenda nyumba hii. Na mji wowote mtakaouingia, wakiwakaribisha, vileni vyakula viwekwavyo mbele yenu; wapozeni wagonjwa waliomo, waambieni, Ufalme wa Mungu umewakaribia. Neno la Bwana… Sifa kwako Ee Kristo. Copyright © 2019,</string>
    <string name="profile_info">This is not username or pin . This name will be visible to your Tafakari Status</string>
    <string name="status_info">Write your status here..</string>
    <string name="setting">Setting</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="phonenumber_info">Ingiza nambari yako ya simu</string>
    <string name="phone_verification_about_message">UTAPATA KODI YA KUDHIBISHA NAMBA YAKO KWA UJUMBE MFUPI.</string>
    <string name="btn_create_account">Sajili Akaunti Mpya</string>
    <string name="phone_verif_error_message">TAFADHALI WASILISHA NAMBARI HALISI YA SIMU</string>
    <string name="phone_verf_exceed_quota">TAFADHALI JARIBU BAADAE</string>
    <string name="phone_verf_code_info">Tumetuma ujumbe mfupi kwa 34343434. Jaza kodi maalumu kuingia kwenye akaunti yako.</string>
    <string name="phone_verf_resend_code_info">HUJAPATA UJUMBE MFUPI? BONYEZA HAPA KUTUMA TENA</string>
    <string name="time_verf_code">SUBIRI 65 SEC KUTUMA TENA.</string>
    <string name="create_account">Jisajiri</string>
    <string name="permission_storage_desc">Storage Idhini inahitajika ili kuweza kuchagu picha kwa ajili ya profile</string>
    <string name="developer_name">Chami Epimark</string>
    <string name="developer_phone1">+255658 713 561 </string>
    <string name="developer_phone2">+255759 366 129</string>

</resources>
